<resources>
    <string name="app_name">COVID-19 TRACKER</string>
    <string name="total_cases">Total Cases</string>
    <string name="recovered">Recovered</string>
    <string name="death">Total Deaths</string>
    <string name="active">Active</string>
    <string name="track_countries">Track Countries</string>
    <string name="world_wide_cases">World Wide Cases</string>
    <string name="affected_countries">Affected Countries</string>
    <string name="today_deaths">Today Deaths</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="_0">0</string>
    <string name="today_cases">Today Cases</string>
    <string name="active1">Active</string>
    <string name="critical">Critical</string>
    <string name="recovered1">Recovered</string>
    <string name="search">Search</string>
    <string name="country">Country</string>
    <string name="cases">Total Cases</string>
    <string name="country_name">Country Name</string>
</resources>
